# workout_wpa

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: front_end.yml  rust_server.yml
front_end/: 3  deno.json  fresh.gen.ts  import_map.json  protobuf_gen_type.ts  twind.config.ts  ç
front_end/islands/: Button_send.tsx  Input.tsx  Select.tsx
front_end/routes/: _middleware.ts  index.tsx  login.tsx  register.tsx
front_end/routes/create/: excersice.tsx
front_end/tests/: deno_test.ts
front_end/types/: users.ts  workouts.ts
proto/: workouts.proto
server/: Cargo.toml
server/src/: auth.rs  build.rs  db.rs  error.rs  lib.rs  main.rs  server_messages.rs  utils.rs
server/src/routes/: .auth.rs.rustfmt  auth.rs  mod.rs  workout.rs
