[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "./src/build.rs"

[dependencies]
# prost ={ version = "0.11", features = ["prost-derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# prost-types = "0.11"
actix-web = "4.3"
actix-cors = "0.6.4"
mime = "0.3.17"
env_logger = "0.10.0"
futures = "0.3"
serde_qs = { version = "0.12.0", features = [ "actix4"] }

# [build-dependencies]
# prost-build = { version = "0.11" }
# fs_extra = "1.3.0"
