[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "./src/build.rs"

[dependencies]
# prost ={ version = "0.11", features = ["prost-derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# prost-types = "0.11"
actix-web = "4.3"
actix-cors = "0.6.4"
mime = "0.3.17"
argon2 = "0.5"
env_logger = "0.10.0"
futures = "0.3"
serde_qs = { version = "0.12.0", features = [ "actix4"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "runtime-actix", "uuid"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
thiserror = "1.0.40"
rand = { version = "0.8.5", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
rand_chacha = "0.3.1"
data-encoding = "2.3.3"
libreauth = "0.16.0"
tracing = { version = "0.1.38", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-test = "0.2.4"

# [build-dependencies]
# prost-build = { version = "0.11" }
# fs_extra = "1.3.0"
